[package]
name = "ip"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"
monoio = "0.1.2"
monoio-compat = "0.1.0"
futures = "0.3.28"
